# openmw

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.vita  README.md
apps/openmw/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp
apps/openmw/mwdialogue/: dialoguemanagerimp.cpp  dialoguemanagerimp.hpp
apps/openmw/mwgui/: class.cpp  class.hpp  console.cpp  console.hpp  cursor.cpp  dialogue.cpp  enchantingdialog.cpp  enchantingdialog.hpp  inventorywindow.cpp  loadingscreen.cpp  mainmenu.cpp  mapwindow.cpp  race.cpp  settingswindow.cpp  settingswindow.hpp  spellcreationdialog.cpp  spellcreationdialog.hpp  textinput.cpp  videowidget.cpp  windowbase.cpp  windowbase.hpp  windowmanagerimp.cpp
apps/openmw/mwinput/: bindingsmanager.cpp  controllermanager.cpp  controllermanager.hpp  inputmanagerimp.cpp  mousemanager.cpp  mousemanager.hpp
apps/openmw/mwlua/: debugbindings.cpp  luamanagerimp.cpp  worker.cpp
apps/openmw/mwmechanics/: actor.hpp  actors.cpp  aipackage.cpp  aipackage.hpp  character.cpp
apps/openmw/mwphysics/: constants.hpp  contacttestresultcallback.hpp  movementsolver.cpp  mtphysics.cpp  mtphysics.hpp  physicssystem.cpp  physicssystem.hpp
apps/openmw/mwrender/: actoranimation.cpp  animation.cpp  animation.hpp  characterpreview.cpp  creatureanimation.cpp  effectmanager.cpp  fogmanager.cpp  fogmanager.hpp  globalmap.cpp  groundcover.cpp  localmap.cpp  npcanimation.cpp  objects.cpp  objects.hpp  postprocessor.cpp  renderingmanager.cpp  renderingmanager.hpp  screenshotmanager.cpp  sky.cpp  skyutil.cpp  water.cpp
apps/openmw/mwscript/: scriptmanagerimp.cpp
apps/openmw/mwsound/: ffmpegdecoder.cpp  soundbuffer.cpp  soundmanagerimp.cpp
apps/openmw/mwstate/: statemanagerimp.cpp
apps/openmw/mwworld/: cellpreloader.cpp  cellpreloader.hpp  cellref.hpp  scene.cpp  scene.hpp  store.cpp  weather.cpp  worldimp.cpp
apps/openmw/vita/: VitaIme.cpp  VitaIme.h  VitaInit.cpp  VitaInit.h  ffmpeg_tx_stubs.c  openmw.cfg  settings.cfg
cmake/: FindOpenGL.cmake  VitaToolchain.cmake
components/: CMakeLists.txt
components/bgsm/: stream.hpp
components/bsa/: ba2gnrlfile.cpp  bsafile.cpp  compressedbsafile.cpp
components/debug/: debugging.cpp
components/detournavigator/: findsmoothpath.hpp  navigatorutils.hpp
components/esm/: stringrefid.cpp
components/esm3/: loadscpt.cpp
components/files/: collections.hpp  configurationmanager.cpp  constrainedfilestreambuf.hpp  fixedpath.hpp  multidircollection.hpp  scancache.cpp  scancache.hpp  vitapath.cpp  vitapath.hpp
components/l10n/: messagebundles.cpp  messagebundles.hpp
components/lua/: configuration.cpp  inputactions.cpp  inputactions.hpp  luastate.cpp  luastate.hpp  utf8.cpp  yamlloader.cpp
components/misc/: osgpluginchecker.cpp  resourcehelpers.cpp  span.hpp
components/misc/strings/: heterogeneous.hpp
components/myguiplatform/: myguirendermanager.cpp
components/nifosg/: controller.cpp  nifloader.cpp
components/resource/: imagemanager.cpp  scenemanager.cpp  scenemanager.hpp
components/sceneutil/: lightmanager.cpp  riggeometry.cpp  riggeometry.hpp  rtt.cpp  shadow.cpp  unrefqueue.hpp
components/sdlutil/: sdlgraphicswindow.cpp  sdlinputwrapper.cpp  sdlinputwrapper.hpp
components/settings/categories/: camera.hpp  cells.hpp  general.hpp
components/shader/: shadervisitor.cpp
components/terrain/: chunkmanager.cpp  material.cpp
components/vfs/: filesystemarchive.cpp  filesystemarchive.hpp  registerarchives.cpp  registerarchives.hpp
components/vita/: CellCullCallback.cpp  CellCullCallback.h  VitaShader.cpp  VitaShader.h  format
components/vita/GL/: gl.h
data/vita/sce_sys/livearea/contents/: template.xml
files/: settings-default.cfg
files/data/mygui/: openmw_list.skin.xml  openmw_settings_window.layout
files/data/scripts/omw/input/: settings.lua
files/data/scripts/omw/music/: actor.lua
patches/osg/: vita-compat.patch
scripts/vita/: add-baked-mods-to-vpk.py  add-resources-to-vpk.py  bsa_pack.py  build-fast.sh  build.sh  fix-bss.py  fix-relocations.py  fix-veneers.py
scripts/vita-deps/: build-all.sh  build-boost.sh  build-ffmpeg.sh  build-icu.sh  build-luajit.sh  build-pvr-psp2.sh  build-vitagl.sh
